Fixed horizontal scrollbar using BlockGrid (Zurb Foundation)

--- a/App/sass/pages/_home.scss
+++ b/App/sass/pages/_home.scss
@@ -1,18 +1,23 @@
 section#home {
   .row {
-    background: #eee;
     font-size: 11px;
     margin-bottom: 10px;
     line-height: 2rem;
-    border: solid 1px #c6c6c6;
     margin-left: 0 !important;
     margin-right: 0 !important;
     max-width: 200rem;
   }
 
-  .row .columns:nth-child(2),
-  .row .columns.small-centered,
-  .row .columns.large-centered {
-    background: #e1e1e1;
+  .colored-grid-showcase {
+    .row {
+      background: #eee;
+      border: solid 1px #c6c6c6;
+    }
+
+    .row .columns:nth-child(2),
+    .row .columns.small-centered,
+    .row .columns.large-centered {
+      background: #e1e1e1;
+    }
   }
 }
